# cmake-c-template

./: CMakeLists.txt  README.md
cmake/modules/: FindZeroMQ.cmake
src/client/: CMakeLists.txt  main.c
src/server/: CMakeLists.txt  main.c
